--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "react-simple-headless-carousel",
   "private": false,
-  "version": "0.0.6",
+  "version": "0.0.8",
   "sideEffects": false,
   "description": "React simple headless carousel",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:ts": "vite build -c vite.lib.config.ts",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "build:css": "NODE_ENV=production tailwindcss -o dist/simple-headless-carousel.min.css -m",
     "preview": "vite preview",
-    "build:lib": "NODE_ENV=production npm run build:ts && npm run build:css"
+    "tsc": "tsc --noEmit",
+    "format": "prettier --write .",
+    "format:ci": "prettier --check .",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build:lib": "vite build -c vite.lib.config.ts",
+    "build:css": "NODE_ENV=production tailwindcss -o dist/styles.min.css -m",
+    "npm:lib": "npm run build:lib && npm run build:css"
   },
   "files": [
     "/dist"
   ],
-  "main": "dist/simple-headless-carousel.umd.csj",
+  "main": "dist/simple-headless-carousel.umd.cjs",
   "module": "dist/simple-headless-carousel.js",
   "types": "dist/index.d.ts",
   "exports": {
@@ -25,11 +28,12 @@
       "import": "./dist/simple-headless-carousel.js",
       "require": "./dist/simple-headless-carousel.umd.cjs",
       "types": "./dist/index.d.ts"
-    }
+    },
+    "./styles.min.css": "./dist/styles.min.css"
   },
   "peerDependencies": {
-    "react": "15.x || 16.x || 17.x || 18.x",
-    "react-dom": "15.x || 16.x || 17.x || 18.x"
+    "react": "16.x || 17.x || 18.x",
+    "react-dom": "16.x || 17.x || 18.x"
   },
   "devDependencies": {
     "react": "^18.2.0",
