fix: prettier issues and tsc

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "tsc": "tsc --noEmit",
     "format": "prettier --write .",
     "format:ci": "prettier --check .",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx",
     "build:lib": "vite build -c vite.lib.config.ts",
     "build:css": "NODE_ENV=production tailwindcss -o dist/styles.min.css -m",
     "npm:lib": "npm run build:lib && npm run build:css"
@@ -46,9 +46,15 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
