--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
     "build": "vite build",
     "preview": "vite preview",
     "tsc": "tsc --noEmit",
@@ -54,8 +56,6 @@
     "react-dom": "16.x || 17.x || 18.x"
   },
   "devDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@types/node": "^20.14.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -64,19 +64,27 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@vitest/ui": "latest",
+    "jsdom": "^24.0.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vite-plugin-dts": "^3.9.1",
     "vite-plugin-lib-inject-css": "^2.1.1",
-    "vite-plugin-dts": "^3.9.1"
+    "vitest": "^2.0.2"
   }
 }
