--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Paweł Stachula",
   "license": "MIT",
   "homepage": "https://simple-headless-carousel.onrender.com/",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "sideEffects": false,
   "description": "React simple headless carousel",
   "keywords": [
@@ -33,13 +33,12 @@
     "format": "prettier --write .",
     "format:ci": "prettier --check .",
     "lint": "eslint . --ext ts,tsx",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
     "build:lib": "vite build -c vite.lib.config.ts",
     "build:css": "NODE_ENV=production tailwindcss -o dist/styles.min.css -m",
     "build:npm": "npm run build:lib && LIB_MODE=lib npm run build:css"
   },
-  "files": [
-    "/dist"
-  ],
+  "files": ["/dist"],
   "main": "dist/simple-headless-carousel.umd.cjs",
   "module": "dist/simple-headless-carousel.js",
   "types": "dist/index.d.ts",
