feat: update examples

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Paweł Stachula",
   "license": "MIT",
   "homepage": "https://simple-headless-carousel.onrender.com/",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "sideEffects": false,
   "description": "React simple headless carousel",
   "keywords": [
@@ -38,7 +38,9 @@
     "build:css": "NODE_ENV=production tailwindcss -o dist/styles.min.css -m",
     "build:npm": "npm run build:lib && LIB_MODE=lib npm run build:css"
   },
-  "files": ["/dist"],
+  "files": [
+    "/dist"
+  ],
   "main": "dist/simple-headless-carousel.umd.cjs",
   "module": "dist/simple-headless-carousel.js",
   "types": "dist/index.d.ts",
@@ -55,25 +57,25 @@
     "react-dom": "16.x || 17.x || 18.x"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20.14.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "latest",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@vitest/ui": "latest",
-    "jsdom": "^24.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.38",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
