--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "dev": "vite",
     "test": "vitest",
+    "test:lint": "vitest --watch=false",
     "test:ui": "vitest --ui",
     "build": "vite build",
     "preview": "vite preview",
@@ -36,7 +37,8 @@
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "build:lib": "vite build -c vite.lib.config.ts",
     "build:css": "NODE_ENV=production tailwindcss -o dist/styles.min.css -m",
-    "build:npm": "npm run build:lib && LIB_MODE=lib npm run build:css"
+    "build:npm": "npm run build:lib && LIB_MODE=lib npm run build:css",
+    "prepare": "husky"
   },
   "files": [
     "/dist"
@@ -75,6 +77,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.38",
     "prettier": "^3.0.3",
