feat: add docusaurus

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "simple",
     "component"
   ],
+  "workspaces": [
+    "packages/*"
+  ],
   "type": "module",
   "scripts": {
     "dev": "vite",
