--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   ],
   "type": "module",
   "scripts": {
+    "build:docs": "cd packages/docs && npm run build",
+    "build:widget": "cd packages/react-simple-headless-carousel && npm run build:npm",
     "tsc": "tsc --noEmit",
     "format": "prettier --write .",
     "format:ci": "prettier --check .",
