--- a/packages/react-simple-headless-carousel/package.json
+++ b/packages/react-simple-headless-carousel/package.json
@@ -7,7 +7,7 @@
   },
   "author": "Paweł Stachula",
   "license": "MIT",
-  "homepage": "https://simple-headless-carousel.onrender.com/",
+  "homepage": "https://simple-react-carousel.onrender.com/",
   "version": "0.0.18",
   "sideEffects": false,
   "description": "React simple headless carousel",
