fix: ci problems

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "scripts": {
     "build:docs": "cd packages/docs && npm run build",
     "build:widget": "cd packages/react-simple-headless-carousel && npm run build:npm",
-    "tsc": "tsc --noEmit",
+    "tsc": "cd packages/react-simple-headless-carousel && npm run tsc",
     "format": "prettier --write .",
     "format:ci": "prettier --check .",
-    "lint": "eslint . --ext ts,tsx",
+    "lint": "eslint . --ext ts,.tsx",
     "lint:fix": "eslint . --ext ts,tsx --fix"
   },
   "peerDependencies": {},
