--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run lint
-      - run: npm run test
       - run: npm run format:ci
-      - run: npm run tsc
-      - run: npm run build
+      - run: npm run test:widget
+      - run: npm run tsc:widget
+      - run: npm run build:widget
