--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -18,10 +18,11 @@
     "@docusaurus/preset-classic": "3.4.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "lucide-react": "^0.447.0",
     "prism-react-renderer": "^2.3.0",
-    "react-simple-headless-carousel": "^0.0.18",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-simple-headless-carousel": "^0.0.18"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.4.0",
