--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -22,7 +22,7 @@
     "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-simple-headless-carousel": "^0.0.18"
+    "react-micro-carousel": "^0.0.21"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.6.1",
