--- a/packages/react-simple-headless-carousel/package.json
+++ b/packages/react-simple-headless-carousel/package.json
@@ -8,7 +8,7 @@
   "author": "Paweł Stachula",
   "license": "MIT",
   "homepage": "https://simple-headless-carousel.onrender.com/",
-  "version": "0.0.22",
+  "version": "0.0.24",
   "sideEffects": false,
   "description": "React Micro Carousel",
   "keywords": [
@@ -58,8 +58,8 @@
     "./styles.min.css": "./dist/styles.min.css"
   },
   "peerDependencies": {
-    "react": "16.x || 17.x || 18.x",
-    "react-dom": "16.x || 17.x || 18.x"
+    "react": "16.x || 17.x || 18.x || 19.x",
+    "react-dom": "16.x || 17.x || 18.x || 19.x"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
