--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "typescript": "^5.6.3"
-  }
+  },
+  "version": "0.0.1"
 }
