--- a/packages/react-simple-headless-carousel/package.json
+++ b/packages/react-simple-headless-carousel/package.json
@@ -8,7 +8,7 @@
   "author": "Paweł Stachula",
   "license": "MIT",
   "homepage": "https://simple-headless-carousel.onrender.com/",
-  "version": "0.0.24",
+  "version": "0.0.27",
   "sideEffects": false,
   "description": "React Micro Carousel",
   "keywords": [
@@ -40,11 +40,12 @@
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "build:lib": "vite build -c vite.lib.config.ts",
     "build:css": "NODE_ENV=production tailwindcss -o dist/styles.min.css -m",
-    "build:npm": "npm run build:lib && LIB_MODE=lib npm run build:css",
+    "build:npm": "npm run build:lib && LIB_MODE=lib npm run build:css && cp ../../README.md README.md && npm version patch",
     "prepare": "husky"
   },
   "files": [
-    "/dist"
+    "/dist",
+    "README.md"
   ],
   "main": "dist/react-micro-carousel.umd.cjs",
   "module": "dist/react-micro-carousel.js",
