--- a/packages/react-simple-headless-carousel/package.json
+++ b/packages/react-simple-headless-carousel/package.json
@@ -59,6 +59,7 @@
     "./styles.min.css": "./dist/styles.min.css"
   },
   "peerDependencies": {
+    "tailwindcss": "3.x",
     "react": "16.x || 17.x || 18.x || 19.x",
     "react-dom": "16.x || 17.x || 18.x || 19.x"
   },
