--- a/package.json
+++ b/package.json
@@ -10,30 +10,34 @@
   ],
   "type": "module",
   "scripts": {
+    "prepare": "husky",
     "build:docs": "cd packages/docs && npm run build",
-    "build:widget": "cd packages/react-simple-headless-carousel && npm run build:npm",
-    "test:widget": "cd packages/react-simple-headless-carousel && npm run test",
-    "tsc:widget": "cd packages/react-simple-headless-carousel && npm run tsc",
+    "build:widget": "cd packages/react-micro-carousel && npm run build:lib",
+    "test:widget": "cd packages/react-micro-carousel && npm run test",
+    "tsc:widget": "cd packages/react-micro-carousel && npm run tsc",
     "format": "prettier --write .",
     "format:ci": "prettier --check .",
     "lint": "eslint . --ext ts,.tsx",
     "lint:fix": "eslint . --ext ts,tsx --fix"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
+    "@types/node": "^22.13.12",
+    "@typescript-eslint/eslint-plugin": "^8.27.0",
+    "@typescript-eslint/parser": "^8.27.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
-    "@types/node": "^22.9.0",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
-    "@typescript-eslint/parser": "^8.14.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "husky": "^9.1.6",
-    "postcss": "^8.4.49",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "typescript": "^5.6.3"
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "husky": "^9.1.7",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "typescript": "^5.8.2"
   },
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "dependencies": {
+    "vite": "^6.2.2"
+  }
 }
