--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -22,7 +22,7 @@
     "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-micro-carousel": "^0.0.33"
+    "react-micro-carousel": "latest"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.7.0",
